java: RocksIterator old api support zero copy
To use zero copy with old api, the ByteBuffer passed to key() & value()
should be created through DirectSlice.newZeroCopyDirectBuffer().

There are subtle differences with `non zero copy` DirectBuffer:
  1. zero copy always fetch the whole key and whole value;
  2. `buf.clear()` is always called on zero copy

The unit test was relaxed to compatible to zero copy's new
behavior, and new unit tests for zero copy was added.

These two zero copy behavior meet the common use cases,
real world applications are unlikely depends on old api for
DirectBuffer's position & limit & mark.